# engy-5140

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
notebooks/: 00-syllabus.ipynb  01-fundamentals.ipynb  02-physchem.ipynb  03-gas-absorption.ipynb  04-gas-absorption-problem.ipynb  05-gas-absorption-stripping-sizing-correlations.ipynb  05-spent-nuclear-fuel.ipynb  hwk-01.ipynb  hwk-02.ipynb  hwk-03-dca.ipynb  hwk-03-tca.ipynb  hwk-03-tce.ipynb  hwk-03.ipynb  hwk-04.ipynb  midterm-exam-1.ipynb  midterm-exam-2.ipynb  project-1.ipynb  project-2.ipynb  project-3.ipynb  project-4.ipynb  project-5.ipynb
notebooks/engy_5140/: help.py
